<resources>
    <string name="app_name">Stage</string>
    <string name="intro_1">Discover new and interesting \n people nearby</string>
    <string name="intro_2">Swipe right to like someone \n or swipe left to pass</string>
    <string name="intro_3">If they also swipe right, then \n it\'s a match!</string>
    <string name="intro_4">Only people you\'ve matched \n with can message you</string>
    <string name="already_member">Already a member?</string>
    <string name="intro_Login"><u>Login</u></string>
    <string name="skip">SKIP</string>
    <string name="start">START</string>
    <string name="log_in">Sign in</string>
    <string name="register">Sign up</string>
    <string name="next">NEXT</string>
    <string name="policy_authentication">By signing in, you agree with our %1$s and %2$s</string>
    <string name="tos">Terms of \n Service</string>
    <string name="request_access_location"><Data><![CDATA[Allow <b>App</b> to access this device"'"s location?]]></Data></string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="search_people_match_you">Finding people near you&#8230;</string>
    <string name="join_in_stage">Join in Stage</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="code_number">Code number</string>
    <string name="field_blank">Oops, please fill this input field!</string>
    <string name="confirm_password">Confirm password</string>
    <string name="password_blank">Please enter your password.</string>
    <string name="password_has_changed">Password has changed.</string>
    <string name="password_invalid">Required 6 characters at minimum.</string>
    <string name="password_not_match">Seems like this password doesn’t match!</string>
    <string name="change_password">Input password and code sent to your email</string>
    <string name="agree_change">Agree to change!</string>
    <string name="des_deny_location">None can be found for\nlocation access is denied.\nPlease allow to access this device"’"s\n location to find other.</string>
    <string name="allow_access_location">Allow access location</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="settings">SETTINGS</string>
    <string name="edit_info">EDIT INFO</string>
    <string name="get_plus">GET PLUS</string>
    <string name="get_tinder_plus">Get Tinder Plus</string>
    <string name="get_more_boost">Get more Boosts</string>
    <string name="get_super_likes">Get Super Likes</string>
    <string name="tap_to_refill_now">Tap to Refill Now&#8230;</string>
    <string name="settings_no_all_cap">Settings</string>
    <string name="show_me">Show Me</string>
    <string name="men">Men</string>
    <string name="women">Women</string>
    <string name="gender">Gender</string>
    <string name="man">Man</string>
    <string name="woman">Woman</string>
    <string name="discovery_settings">Discovery settings</string>
    <string name="maximum_distance">Maximum distance</string>
    <string name="age_range">Age range</string>
    <string name="distance_unit">Distance unit</string>
    <string name="mi">Mi.</string>
    <string name="km">Km.</string>
    <string name="profile">PROFILE</string>
    <string name="show_me_on_tinder">Show me on Tinder</string>
    <string name="notifications">Notifications</string>
    <string name="new_matches">New Matches</string>
    <string name="messages">Messages</string>
    <string name="message_likes">Message Likes</string>
    <string name="super_likes">Super Likes</string>
    <string name="app_settings">App Settings</string>
    <string name="contact_us">Contact Us</string>
    <string name="help_support">Help &#38; Support</string>
    <string name="share_app">Share App</string>
    <string name="restore_purchase">Restore Purchase</string>
    <string name="legal">Legal</string>
    <string name="licenses">Licenses</string>
    <string name="term_of_service">Terms of Service</string>
    <string name="logout">Logout</string>
    <string name="delete_account">Delete Account</string>
    <string name="current_work">Current work</string>
    <string name="school">School</string>
    <string name="select_school">Select school</string>
    <string name="done">Done</string>
    <string name="ok">OK</string>
    <string name="send">Send</string>
    <string name="max_500_letters">Max 500 letters</string>
    <string name="content_contact_us">Is there any question or suggestion? Please let us know.</string>
    <string name="cancel">Cancel</string>
    <string name="about_me">About me</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="birthday">Birthday</string>
    <string name="no_search_result">No search result</string>
    <string name="no_matching_found">No matching found.</string>
    <string name="search">Search</string>
    <string name="email">Email</string>
    <string name="accept">Accept</string>
    <string name="question_logout">Are you sure you want to log out? Still you will be seen by compatible users in your last known location.</string>
    <string name="reset_password">Reset password</string>
    <string name="you_are_loggout">You are Logged out.</string>
    <string name="log_out">LOG OUT</string>
    <string name="email_blank">Please enter your email.</string>
    <string name="username_blank">Please enter your username</string>
    <string name="email_invalid">Your email is invalid.</string>
    <string name="allow">ALLOW</string>
    <string name="deny">DENY</string>
    <string name="dont_know">Don\'t know</string>
    <string name="instagram">Instagram</string>
    <string name="unknown_error_network">Something went wrong with network!</string>
    <string name="reset_password_to_email">Reset password to email</string>
    <string name="forgot_password"><Data><![CDATA[<u>Forgot password?</u>]]></Data></string>
    <string name="des_forgot_password"><Data><![CDATA[Enter your email address to<br><b>reset</b> your <b>password.</b>]]></Data></string>
    <string name="choose_from_gallery">Choose from Gallery</string>
    <string name="take_photo">Take photo</string>
    <string name="enter_username">Enter username</string>
    <string name="enter_password">Enter password</string>
    <string name="select_picture">Select Picture</string>
    <string name="account_is_deleted">Account is Deleted</string>
    <string name="type_something">Type something</string>
    <string name="new_talk_pal">It\'s a Match</string>
    <string name="send_a_message">SEND A MESSAGE</string>
    <string name="later">Later</string>
    <string name="report">Report</string>
    <string name="report_user">Report User</string>
    <string name="infomation_report">Is this person bothering you?\nPlease let us know what they did.</string>
    <string name="inappropriate_messages">Inappropriate messages</string>
    <string name="inappropriate_photos">Inappropriate photos</string>
    <string name="bad_offline_behavior">Bad offline behavior</string>
    <string name="feels_like_spam">Feels like spam</string>
    <string name="other">Other</string>
    <string name="other_inappropriate">Other: Additional info</string>
    <string name="report_sent">Your report has been sent!!!</string>
    <string name="say_hi_to_your_new_talk_pal">Say something to your new match.</string>
    <string name="question_delete_account">If you delete your account, you will permanatly lose your profile, messages, photos.\nAre you sure you want to delete your account?</string>
    <string name="explain_smart_photos">Smart Photos continuously tests all your profile photos and picks the best one to show first.</string>
</resources>
